	* as/mcs51/assym.c: strcmpi -> as_strcmpi
	* as/mcs51/lkmem.c: strcmpi -> as_strcmpi
	* as/mcs51/lknoice.c: strcmpi -> as_strcmpi
	* as/mcs51/lksym.c: strcmpi -> as_strcmpi
	* as/mcs51/Makefile.aslink: new module strcmpi
	* as/mcs51/Makefile.asx8051: new module strcmpi
	* as/mcs51/Makefil.bcc: new module strcmpi
	* as/mcs51/Makefile.in: new module strcmpi

2003-01-26    <johan@balder>

	* src/SDCCglue.c: reverted back to 1.124
	* src/SDCCast.c: reverted back to 1.156
	* src/mcs51/gen.c (aopGet): applied Frieder's efficiency patch

2003-01-25    <johan@balder>

	* src/SDCCglue.c: A better fix for bug #661910
	* src/SDCCast.c: A better fix for bug #661910
	* src/SDCCglue.c (emitRegularMap): That was a little too efficient

2003-01-24  Bernhard Held <bernhard@bernhardheld.de>

	* src/Makefile.in: remove spawn.o
	* src/SDCCmain.c: remove spawn.h
	* src/SDCCmain.c (printVersionInfo): report MINGW32 instead of UNIX
	* src/spawn.c: removed
	* src/spawn.h: removed
	* support/regression/ports/ds390/spec.mk: link with -r

2003-01-24    <johan@CP255758-A>

	* src/ds390/gen.c (aopOp): fixed bug #667458
	* src/SDCCglue.c (emitRegularMap): fixed bug #458099 again
	* src/SDCCast.c (createIvalCharPtr): fixed bug #661910
	(createIvalCharPtr): an ival doesn't always have a storage class anymore

2003-01-24  Bernhard Held <bernhard@bernhardheld.de>

	* src/mcs51/peeph.def: better assembler identation by Frieder
	* src/mcs51/gen.c: better assembler identation by Frieder

2003-01-22  Bernhard Held <bernhard@bernhardheld.de>

	* as/z80/string.h: removed for gcc 3.2
	* support/makebin/makebin.c: #include <string.h> for gcc 3.2
	* src/pic/pcode.c (get_op_from_instruction): fix concatenation of string literals with __FUNCTION__ for gcc 3.2

2003-01-19  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCmain.c (linkEdit): rename mem and map files even in case of failure
	* src/SDCCpeeph.c (replaceRule): fix bug #663503
	* support/regression/Makefile: separate temp files for ports